--- a/InventoryControl/packages.config
+++ b/InventoryControl/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MySqlConnector" version="1.3.14" targetFramework="net472" />
+  <package id="QRCoder" version="1.4.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
